syntax = "proto3";

option java_multiple_files = true;

package org.boardproject.userservice.api;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
